--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.4.1
 cachetools==4.2.2
 certifi==2021.5.30
+cffi==1.14.6
 charset-normalizer==2.0.4
+cryptography==3.4.8
 dj-database-url==0.5.0
 Django==3.2.6
 django-appconf==1.0.4
@@ -22,6 +24,7 @@ protobuf==3.17.3
 psycopg2==2.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.20
 pyparsing==2.4.7
 python-dateutil==2.8.2
 python-decouple==3.4
